# deepCattleCount

./: .gitignore  Ensemble-test-set.ipynb  README.md  environment.yml  inference.py  inference_list.json  pyproject.toml  test.json  torch_environment.yml  torch_environment_cpu.yml  train.json  train.py
src/: config.py  dataset.py  image.py  model.py  training.py  utils.py
train_val/: val.json
